# mmllm

./: .example.env  .gitignore  INITIAL.md  PARALLEL_BENCHMARKING.md  QUICK_START_PARALLEL.md  README.md  SimpleOCRAgent_Architecture_Notebook.ipynb  demo.py  parallel_benchmark_example.py  performance_comparison.py  plot_episode.py  pyproject.toml  run_parallel_benchmark.py  run_safe_benchmark.py  test_new_config.py
PRPs/: analysis-vis.md  evaluation_prp.md  langgraph-multimodal-agent.md  planner_improvement.md
PRPs/commands/: execute-prp.md  generate-prp.md
PRPs/features/: EVALUATION.MD  PLANNER_IMPROVEMENTS.MD  analysis-vis.MD
benchmark_results/: benchmark_report_20250713_131404.json  benchmark_results_20250713_131404.csv  config_20250713_145945.json  config_20250720_154334.json  config_20250720_160117.json  config_20250801_195812.json
docs/: AGENT_OCR_ARCHITECTURE.md  BENCHMARKING.md  INSTALLATION.md  PARALLEL_BENCHMARKING.md  SYSTEM_ARCHITECTURE.md  UTILITIES.md
evaluation_reports/: batch_report_20250710_214354.json  batch_report_20250710_214354.md  batch_report_20250710_214757.json  batch_report_20250710_214757.md
results/ocr-vs-no-ocr/no-ocr/: benchmark_report_20250720_161713.json  benchmark_results_20250720_161713.csv
results/ocr-vs-no-ocr/ocr/: benchmark_report_20250719_171704.json  benchmark_report_20250720_155843.json  benchmark_results_20250719_171704.csv  benchmark_results_20250720_155843.csv  config_20250719_170010.json
results/stateless-vs-statefull/statefull/: benchmark_report_20250720_125011.json  benchmark_results_20250720_125011.csv
results/stateless-vs-statefull/stateless/: benchmark_report_20250720_121356.json  benchmark_results_20250720_121356.csv
results/tree-vs-no-tree/no-tree/: benchmark_report_20250720_130908.json  benchmark_results_20250720_130908.csv
results/tree-vs-no-tree/tree/: benchmark_report_20250720_130945.json  benchmark_results_20250720_130945.csv
src/mmllm/: __init__.py  agent.py  main.py  model.py
tests/: test_episode_evaluation.py  test_multi_agent.py
vis/: README.md  comprehensive_analysis.ipynb  ocr_vs_no_ocr_analysis.ipynb  stateful_vs_stateless_analysis.ipynb  tree_analysis.ipynb
(+52 files in other folders)
