[project]
name = "mmllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "karim", email = "karim.samir.lotfy@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "tensorflow>=2.19.0",
]

[project.scripts]
mmllm = "mmllm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
