[project]
name = "mmllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "karim", email = "karim.samir.lotfy@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.8.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jax>=0.6.2",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]

[project.scripts]
mmllm = "mmllm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
